# Nanoback

./: .gitignore  CMakeLists.txt  README.md  main.cpp  packages.txt  pyproject.toml  requirements.txt  run.sh  setup.py
bindings/: nanoback_bindings.cpp
data/: AAPL.csv  AAPL_tick_data.csv  NVDA.csv  csv_to_proto.py  data.py
data/proto/: ohlcv_pb2.py
include/: backtest_result.hpp  benchmark.hpp  data_handler.hpp  event_queue.hpp  events.hpp  execution_handler.hpp  idata_handler.hpp  live_session.hpp  live_state.hpp  overload.hpp  performance.hpp  portfolio.hpp  proto_data_handler.hpp  run_backtest.hpp
include/data/: data_handler.hpp
include/events/: event_queue.hpp  events.hpp
include/execution/: execution_handler.hpp
include/performance/: performance.hpp
include/portfolio/: portfolio.hpp
include/strategy/: breakout_strategy.hpp  istrategy.hpp  mean_reversion_strategy.hpp  momentum_strategy.hpp  orb_strategy.hpp  pullback_strategy.hpp  rsi_strategy.hpp  scalping_strategy.hpp  strategy.hpp  strategy_factory.hpp  vwap_strategy.hpp
nanoback.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
proto/: ohlcv.proto
src/: data_handler.cpp  event_queue.cpp  execution_handler.cpp  live_session.cpp  performance.cpp  portfolio.cpp  proto_data_handler.cpp  run_backtest.cpp
src/data/: data_handler.cpp
src/events/: event_queue.cpp  events.cpp
src/execution/: execution_handler.cpp
src/performance/: performance.cpp
src/portfolio/: portfolio.cpp
src/strategy/: breakout_strategy.cpp  mean_reversion_strategy.cpp  momentum_strategy.cpp  orb_strategy.cpp  pullback_strategy.cpp  rsi_strategy.cpp  scalping_strategy.cpp  strategy.cpp  strategy_factory.cpp  vwap_strategy.cpp
tests/: CMakeLists.txt  inject_dummy_paper.py  test_bindings.py
tests/data/: test_data_handler.cpp  test_proto_data_handler.cpp
tests/events/: test_event_queue.cpp
tests/execution/: test_execution_handler.cpp
tests/live/: test_live_session.cpp
tests/performance/: test_performance.cpp
tests/portfolio/: test_portfolio.cpp
tests/run_backtest/: test_run_backtest.cpp
tests/strategy/: test_strategy.cpp
ui/: app.py
